src/test/c/accept/19-if-conditional.arcx
if (4==6)
{
    vara:int=0;
}
else if (41 ==2)
{
    varb:int=0;
}
else
{
    varc:int=0;
}
