src/test/c/reject/19-missing-block-in-if.arcx
if (a == b)
    a:int=0;
else
{
    b:int=0;
} 